<resources>

    <string name="app_name">ClassEngaze</string>
    <string name="enter_no">Enter your mobile number</string>
    <string name="phone_hint">Enter your mobile number</string>
    <string name="transition_arrow">transition_arrow</string>
    <string name="transition_ivFlag">transition_ivFlag</string>
    <string name="transition_tvCode">transition_tvCode</string>
    <string name="transition_tvPhoneNo">transition_tvPhoneNo</string>
    <string name="transition_llPhone">transition_llPhone</string>
    <string name="welcome_back">Enter the 6-digit code sent to you at</string>
    <string name="email_not_valid">Email address not valid</string>

    ---------------------------------------------------------------------------------------------------
    <string name="status">Status</string>

    <string name="classroom_profile_picture">Classroom Profile Picture</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_uploading_slide">UploadingSlide</string>
    <string name="progress_uploading">Uploading…</string>
    <string name="upload_success">Successfully Uploaded</string>
    <string name="upload_failure">Error while uploading</string>
    <string name="progress_downloading">Downloading…</string>
    <string name="download_success">Successfully Downloaded</string>
    <string name="download_failure">Failed to Download</string>
</resources>
