<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="296dp"
            android:scaleType="fitStart"
            android:src="@drawable/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/phoneContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:paddingTop="48dp"
            android:transitionName="@string/transition_llPhone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo">

            <TextView
                android:id="@+id/greetText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="Welcome to\nHO GAYI"
                android:textColor="@color/black"
                android:textSize="40sp"
                app:layout_constraintBottom_toTopOf="@+id/tvMoving"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.24000001" />

            <TextView
                android:id="@+id/tvMoving"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:paddingLeft="20dp"
                android:text="Study and excel"
                android:textColor="@color/textDarkSecondary"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/llInfo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/greetText" />


            <LinearLayout
                android:id="@+id/llInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                app:layout_constraintBottom_toTopOf="@+id/view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMoving">

                <ImageView
                    android:id="@+id/ivFlag"
                    android:layout_width="42dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/flag"
                    android:transitionName="@string/transition_ivFlag" />

                <TextView
                    android:id="@+id/tvCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:text="+91"
                    android:textColor="#0E0E0E"
                    android:textSize="16sp"
                    android:transitionName="@string/transition_tvCode" />

                <TextView
                    android:id="@+id/tvPhoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/phone_hint"
                    android:textColorHint="#DADBDF"
                    android:textSize="20sp"
                    android:transitionName="@string/transition_tvPhoneNo" />

            </LinearLayout>


            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/llInfo"
                android:layout_marginBottom="64dp"
                android:background="#EEEEEE"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llInfo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/ivback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:src="@drawable/ic_arrow_back"
        android:transitionName="@string/transition_arrow" />

</FrameLayout>