<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:id="@+id/llphone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical"
        android:paddingTop="72dp"
        android:transitionName="@string/transition_llPhone">

        <TextView
            android:id="@+id/tvMoving"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:hint="sdfsdfdsf"
            android:text="@string/enter_no"
            android:textColor="#262626"
            android:textColorHint="#DADBDF"
            android:textSize="18sp"
            android:transitionName="@string/transition_tvPhoneNo" />


        <include layout="@layout/phone_input" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/referralFrame"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal"
            android:paddingEnd="24dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/colorSecondary"
            app:helperTextEnabled="true"
            app:hintTextColor="@color/colorSecondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/referral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:hint="Referral Code (if any)"
                android:inputType="textNoSuggestions"
                android:textCursorDrawable="@drawable/black_cursor"
                android:textSize="@dimen/text_medium" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <include layout="@layout/fab_progress" />

    <include layout="@layout/back_button" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>